kw-service: test refactor